[tool.poetry]
name = "peppermint"
version = "0.1.0"
description = ""
authors = ["Joe Barrow <joseph.d.barrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
transformers = "^4.35.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
